tests/ui/repr/repr-transparent-non-exhaustive.stderr
error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:44:22
   |
LL | pub struct T5(Sized, Private);
   |                      ^^^^^^^
   |
   = note: this field contains `Private`, which contains private fields, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:48:22
   |
LL | pub struct T6(Sized, NonExhaustive);
   |                      ^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:57:22
   |
LL | pub struct T7(Sized, NonExhaustiveEnum);
   |                      ^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveEnum`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:61:22
   |
LL | pub struct T8(Sized, NonExhaustiveVariant);
   |                      ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveVariant`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:65:22
   |
LL | pub struct T9(Sized, InternalIndirection<Private>);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `Private`, which contains private fields, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:69:23
   |
LL | pub struct T10(Sized, InternalIndirection<NonExhaustive>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:73:23
   |
LL | pub struct T11(Sized, InternalIndirection<NonExhaustiveEnum>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveEnum`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:77:23
   |
LL | pub struct T12(Sized, InternalIndirection<NonExhaustiveVariant>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveVariant`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:81:23
   |
LL | pub struct T13(Sized, ExternalIndirection<Private>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `Private`, which contains private fields, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:85:23
   |
LL | pub struct T14(Sized, ExternalIndirection<NonExhaustive>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:89:23
   |
LL | pub struct T15(Sized, ExternalIndirection<NonExhaustiveEnum>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveEnum`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:93:23
   |
LL | pub struct T16(Sized, ExternalIndirection<NonExhaustiveVariant>);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustiveVariant`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:97:16
   |
LL | pub struct T17(NonExhaustive, Sized);
   |                ^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:101:31
   |
LL | pub struct T18(NonExhaustive, NonExhaustive);
   |                               ^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:105:31
   |
LL | pub struct T19(NonExhaustive, Private);
   |                               ^^^^^^^
   |
   = note: this field contains `Private`, which contains private fields, and makes it not a breaking change to become non-zero-sized in the future.

error: zero-sized fields in `repr(transparent)` cannot contain external non-exhaustive types
  --> $DIR/repr-transparent-non-exhaustive.rs:109:32
   |
LL | pub struct T19Flipped(Private, NonExhaustive);
   |                                ^^^^^^^^^^^^^
   |
   = note: this field contains `NonExhaustive`, which is marked with `#[non_exhaustive]`, and makes it not a breaking change to become non-zero-sized in the future.

error: aborting due to 16 previous errors

